bug(badge): fix icon alignment for TD

--- a/ui/components/badges/base/_index.scss
+++ b/ui/components/badges/base/_index.scss
@@ -18,7 +18,7 @@
   text-transform: uppercase;
   letter-spacing: 0.0625em;
   color: $color-text-default;
-  vertical-align: top;
+  vertical-align: bottom;
   white-space: nowrap;
 
   + .slds-badge {
